--- a/index.html
+++ b/index.html
@@ -14,86 +14,78 @@
         }
 
         header {
-            display: inline-block;
-            width: 100%;
+            text-align: center;
+            background-color: white; /* Set background color to white */
+            padding: 10px;
         }
 
         h1 {
-            float: left;
             margin: 0;
+            color: black; /* Set text color to black for better visibility */
         }
 
         nav {
-            float: right;
-            margin-top: 10px;
             text-align: center;
             background-color: black;
+            color: white;
+            padding: 10px;
+            position: relative;
+            top: 10px; /* Adjust the position to lower the navigation bar */
         }
 
         nav a {
-            display: inline-block;
             text-decoration: none;
-            color: black;
+            color: white;
             padding: 0 10px;
         }
 
         main {
             line-height: 22px;
+            margin-top: 20px;
         }
 
         img {
-            /* TODO 2: Set the image width so that the 3 images fit in 1 row and fills the browser width */
-            img {
-    width: 100%;
-    max-width: 300px; /* Optional: Set a max-width to limit image size */
-    height: auto; /* Maintain aspect ratio */
-}
+            width: 100%;
+            height: auto; /* Maintain aspect ratio */
+            display: block;
+            margin: 0 auto;
         }
 
-        /* TODO 3: Add CSS media queries for smaller screens */
-        @media only screen and (max-width: 768px) {
+        /* TODO 2: Set the image width so that the 3 images fit in 1 row and fill the browser width */
+        @media only screen and (min-width: 768px) {
+            section {
+                display: flex;
+                justify-content: space-around;
+            }
 
+            img {
+                width: 100%;
+                max-width: none; /* Remove max-width for larger screens */
+            }
+        }
+
+        /* TODO 4: Center logo and move navigation below in larger views */
+        @media only screen and (min-width: 768px) {
             h1 {
-    text-align: center;
-    margin: 10px 0; /* Add space around the logo */
-}
+                text-align: center;
+            }
 
-        /* TODO 5: Shift navigation below logo, add a black background and center all nav items */
-        nav {
-    float: none;
-    margin: 10px 0; /* Add space between logo and navigation */
-    text-align: center;
-    background-color: black;
-}
+            nav {
+                float: none;
+                margin-top: 40px; /* Adjust the margin for better spacing */
+            }
 
-nav a {
-    display: block;
-    padding: 10px;
-    color: white;
-}
-@media only screen and (max-width: 768px) {
-    nav {
-        margin-top: 0; /* Adjust margin for smaller screens */
-    }
+            nav a {
+                display: block;
+                padding: 10px 0;
+            }
+        }
 
-    nav a {
-        display: block;
-        margin: 10px 0; /* Add space between navigation items on smaller screens */
-    }
-}
-        /* TODO 6: Stack the 3 images in 1 column */
+        /* TODO 7: Hide the video on smaller screens */
         @media only screen and (max-width: 768px) {
-    img {
-        width: 100%; /* Make images take full width */
-        max-width: none; /* Remove max-width for smaller screens */
-    }
-} 
-        /* TODO 7: Hide the video */
-        @media only screen and (max-width: 768px) {
-    iframe {
-        display: none; /* Hide the video on smaller screens */
-    }
-}
+            iframe {
+                display: none;
+            }
         }
     </style>
 </head>
@@ -101,12 +93,13 @@ nav a {
 <body>
     <header>
         <h1>Responsive Web Page</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
     </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
 
     <main>
         <section>
@@ -118,11 +111,13 @@ nav a {
         </section>
 
         <section>
-            <img src="C:\Users\afsin\Documents\GitHub\Halidha19.github.io\1.jpg" width="300"><img src="C:\Users\afsin\Documents\GitHub\Halidha19.github.io\2.jpg" width="300"><img src="C:\Users\afsin\Documents\GitHub\Halidha19.github.io\3.jpg" width="300">
+            <img src="C:\Users\afsin\Documents\GitHub\Halidha19.github.io\1.jpg" alt="Image 1">
+            <img src="C:\Users\afsin\Documents\GitHub\Halidha19.github.io\2.jpg" alt="Image 2">
+            <img src="C:\Users\afsin\Documents\GitHub\Halidha19.github.io\3.jpg" alt="Image 3">
         </section>
 
         <section>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HCDVN7DCzYE"
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/HCDVN7DCzYE"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
